
EXTRA_DIST = \
    AddinCSharp.vcproj \
    csh_calendars.cpp \
    csh_exercise.cpp \
    csh_handles.cpp \
    csh_indexes.cpp \
    csh_instruments.cpp \
    csh_math.cpp \
    csh_models.cpp \
    csh_payoffs.cpp \
    csh_pricingengines.cpp \
    csh_processes.cpp \
    csh_quote.cpp \
    csh_schedule.cpp \
    csh_settings.cpp \
    csh_termstructures.cpp \
    csh_utilities.cpp \
    csh_vanillaswaps.cpp \
    csh_volatilities.cpp \
    Export.cs \
    init.cpp \
    loop.hpp

