
AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}
ClientCountify_LDADD = ../../AddinCfy/libCountifyQuantLibAddin.la
ClientCountify_LDFLAGS = -lObjectHandler -lQuantLib -lboost_filesystem -lboost_serialization -lboost_system -lboost_regex
ClientCountify_SOURCES = ClientCountify.cpp
noinst_PROGRAMS = ClientCountify

