
AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
    vo_date.hpp \
    vo_exercise.hpp \
    vo_instruments.hpp \
    vo_processes.hpp \
    vo_quote.hpp \
    vo_settings.hpp \
    vo_utilities.hpp \
    vo_volatilities.hpp \
    vo_yieldtermstructures.hpp

libValueObjects_la_SOURCES = \
    vo_date.cpp \
    vo_exercise.cpp \
    vo_instruments.cpp \
    vo_processes.cpp \
    vo_quote.cpp \
    vo_settings.cpp \
    vo_utilities.cpp \
    vo_volatilities.cpp \
    vo_yieldtermstructures.cpp

noinst_LTLIBRARIES = libValueObjects.la

