
AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

noinst_LTLIBRARIES = libValueObjects.la

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
    vo_couponvectors.hpp \
    vo_exercise.hpp \
    vo_handles.hpp \
    vo_indexes.hpp \
    vo_instruments.hpp \
    vo_interpolation.hpp \
    vo_leg.hpp \
    vo_math.hpp \
    vo_models.hpp \
    vo_payoffs.hpp \
    vo_piecewiseyieldcurve.hpp \
    vo_pricingengines.hpp \
    vo_processes.hpp \
    vo_quote.hpp \
    vo_ratehelpers.hpp \
    vo_schedule.hpp \
    vo_termstructures.hpp \
    vo_vanillaswaps.hpp \
    vo_volatilities.hpp

libValueObjects_la_SOURCES = \
    vo_couponvectors.cpp \
    vo_exercise.cpp \
    vo_handles.cpp \
    vo_indexes.cpp \
    vo_instruments.cpp \
    vo_interpolation.cpp \
    vo_leg.cpp \
    vo_math.cpp \
    vo_models.cpp \
    vo_payoffs.cpp \
    vo_piecewiseyieldcurve.cpp \
    vo_pricingengines.cpp \
    vo_processes.cpp \
    vo_quote.cpp \
    vo_ratehelpers.cpp \
    vo_schedule.cpp \
    vo_termstructures.cpp \
    vo_vanillaswaps.cpp \
    vo_volatilities.cpp

