
AM_CPPFLAGS = -I${top_srcdir}
includedir = $(prefix)/include/qlo/enumerations/constructors

noinst_LTLIBRARIES = libEnumerationConstructors.la

include_HEADERS = \
    enumeratedclasses.hpp \
    enumeratedpairs.hpp

libEnumerationConstructors_la_SOURCES = \
    enumeratedclasses.cpp \
    enumeratedpairs.cpp

