
AM_CPPFLAGS = -I${top_srcdir}
includedir = $(prefix)/include/qlo/enumerations/factories

noinst_LTLIBRARIES = libEnumerationFactories.la

include_HEADERS = \
    all.hpp \
    calendarfactory.hpp \
    conundrumpricerfactory.hpp \
    historicalforwardratesanalysisfactory.hpp \
    iborcouponpricersfactory.hpp \
    interpolationsfactory.hpp \
    payoffsfactory.hpp \
    pricingenginesfactory.hpp \
    termstructuresfactory.hpp

libEnumerationFactories_la_SOURCES = \
    calendarfactory.cpp

