
AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
    register_all.hpp \
    register_classes.hpp \
    register_types.hpp

libEnumerationRegister_la_SOURCES = \
    register_all.cpp \
    register_classes.cpp \
    register_types_calendars.cpp \
    register_types_daycounters.cpp \
    register_types_optiontypes.cpp

noinst_LTLIBRARIES = libEnumerationRegister.la

