
AM_CPPFLAGS = -I${top_srcdir}
includedir = $(prefix)/include/qlo/enumerations/register

noinst_LTLIBRARIES = libEnumerationRegister.la

include_HEADERS = \
    register_all.hpp \
    register_classes.hpp \
    register_types.hpp

libEnumerationRegister_la_SOURCES = \
    register_all.cpp \
    register_classes.cpp \
    register_pairs.cpp \
    register_types.cpp

