
AM_CPPFLAGS = -I${top_srcdir}
includedir = $(prefix)/include/qlo/serialization/create

noinst_LTLIBRARIES = libCreate.la

include_HEADERS = \
    create_all.hpp \
    create_calendars.hpp \
    create_couponvectors.hpp \
    create_date2.hpp \
    create_date.hpp \
    create_daycounters.hpp \
    create_exercise.hpp \
    create_handles.hpp \
    create_indexes.hpp \
    create_instruments.hpp \
    create_interpolation.hpp \
    create_leg.hpp \
    create_payoffs.hpp \
    create_piecewiseyieldcurve.hpp \
    create_prices.hpp \
    create_pricingengines.hpp \
    create_processes.hpp \
    create_quote.hpp \
    create_ratehelpers.hpp \
    create_schedule.hpp \
    create_settings.hpp \
    create_termstructures.hpp \
    create_utilities.hpp \
    create_volatilities.hpp

libCreate_la_SOURCES = \
    create_calendars.cpp \
    create_couponvectors.cpp \
    create_date2.cpp \
    create_date.cpp \
    create_daycounters.cpp \
    create_exercise.cpp \
    create_handles.cpp \
    create_indexes.cpp \
    create_instruments.cpp \
    create_interpolation.cpp \
    create_leg.cpp \
    create_payoffs.cpp \
    create_piecewiseyieldcurve.cpp \
    create_prices.cpp \
    create_pricingengines.cpp \
    create_processes.cpp \
    create_quote.cpp \
    create_ratehelpers.cpp \
    create_schedule.cpp \
    create_settings.cpp \
    create_termstructures.cpp \
    create_utilities.cpp \
    create_volatilities.cpp

