
AM_CPPFLAGS = -I${top_srcdir}
includedir = $(prefix)/include/qlo/serialization/create

noinst_LTLIBRARIES = libCreate.la

include_HEADERS = \
    create_all.hpp \
    create_couponvectors.hpp \
    create_exercise.hpp \
    create_handles.hpp \
    create_indexes.hpp \
    create_instruments.hpp \
    create_interpolation.hpp \
    create_leg.hpp \
    create_math.hpp \
    create_models.hpp \
    create_payoffs.hpp \
    create_piecewiseyieldcurve.hpp \
    create_pricingengines.hpp \
    create_processes.hpp \
    create_quote.hpp \
    create_ratehelpers.hpp \
    create_schedule.hpp \
    create_termstructures.hpp \
    create_vanillaswaps.hpp \
    create_volatilities.hpp

libCreate_la_SOURCES = \
    create_couponvectors.cpp \
    create_exercise.cpp \
    create_handles.cpp \
    create_indexes.cpp \
    create_instruments.cpp \
    create_interpolation.cpp \
    create_leg.cpp \
    create_math.cpp \
    create_models.cpp \
    create_payoffs.cpp \
    create_piecewiseyieldcurve.cpp \
    create_pricingengines.cpp \
    create_processes.cpp \
    create_quote.cpp \
    create_ratehelpers.cpp \
    create_schedule.cpp \
    create_termstructures.cpp \
    create_vanillaswaps.cpp \
    create_volatilities.cpp

