
AM_CPPFLAGS = -I${top_srcdir}
#includedir = $(prefix)/include/qlo/serialization/register

noinst_LTLIBRARIES = libRegister.la

noinst_HEADERS = \
    serialization_all.hpp \
    serialization_couponvectors.hpp \
    serialization_exercise.hpp \
    serialization_handles.hpp \
    serialization_indexes.hpp \
    serialization_instruments.hpp \
    serialization_interpolation.hpp \
    serialization_leg.hpp \
    serialization_math.hpp \
    serialization_models.hpp \
    serialization_payoffs.hpp \
    serialization_piecewiseyieldcurve.hpp \
    serialization_pricingengines.hpp \
    serialization_processes.hpp \
    serialization_quote.hpp \
    serialization_ratehelpers.hpp \
    serialization_register.hpp \
    serialization_schedule.hpp \
    serialization_termstructures.hpp \
    serialization_vanillaswaps.hpp \
    serialization_volatilities.hpp

libRegister_la_SOURCES = \
    serialization_couponvectors.cpp \
    serialization_exercise.cpp \
    serialization_handles.cpp \
    serialization_indexes.cpp \
    serialization_instruments.cpp \
    serialization_interpolation.cpp \
    serialization_leg.cpp \
    serialization_math.cpp \
    serialization_models.cpp \
    serialization_payoffs.cpp \
    serialization_piecewiseyieldcurve.cpp \
    serialization_pricingengines.cpp \
    serialization_processes.cpp \
    serialization_quote.cpp \
    serialization_ratehelpers.cpp \
    serialization_schedule.cpp \
    serialization_termstructures.cpp \
    serialization_vanillaswaps.cpp \
    serialization_volatilities.cpp

